--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="https://bwfbadminton.com/">Badminton</a></li>
         <li>Cricket</li>
         <li>Listening Music</li>
-        <li><a href="C:\Users\DELL\Downloads\Web Development\HTML- Personal Site\contact-me.html">Contact</a></li>
+        <li><a href="contact-me.html">Contact</a></li>
     </ol>
 
     <hr>
