--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing ="30">
         <tr>
-            <td><img src="C:\Users\DELL\OneDrive\Pictures\Screenshots\2022-05-20.png" alt="Himanshu Jaglan profile Picture"></td>
+            <td><img src="2022-05-20.png" alt="Himanshu Jaglan profile Picture"></td>
             <td> <h1>Himanshu Jaglan</h1>
                 <p><em>Student at<strong> IIT BHU(Varanasi)</strong> </em></p>
                 <p> Upcoming Web Developer </p></td>
@@ -29,9 +29,8 @@
         <li><a href="https://bwfbadminton.com/">Badminton</a></li>
         <li>Cricket</li>
         <li>Listening Music</li>
-        <li><a href="contact-me.html">Contact</a></li>
     </ol>
-
+    <a href="contact-me.html">Contact</a>
     <hr>
     <h3>My Experience</h3>
     <table border="1">
